remove dd fix, set 100% height to allow scrollbar

--- a/src/app/grid-finjs/grid-finjs-demo.component.scss
+++ b/src/app/grid-finjs/grid-finjs-demo.component.scss
@@ -220,15 +220,15 @@
         font-size: 0.8125rem;
     }
 
-    .igx-button-group > .igx-button--compact {
-        height: 1rem;
-        min-height: 1.5rem;
-    }
+    // .igx-button-group > .igx-button--compact {
+    //     height: 1rem;
+    //     min-height: 1.5rem;
+    // }
 
-    .igx-button-group > .igx-button--cosy {
-        height: 1rem;
-        min-height: 1.875rem;
-    }
+    // .igx-button-group > .igx-button--cosy {
+    //     height: 1rem;
+    //     min-height: 1.875rem;
+    // }
 }
 
 .grid__wrapper {
